my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENLST/ENLST.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENLST.dml:7:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENLST.dml:9:5: error ENLST: not a list: 1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENLST.dml:13:5: error ENLST: not a list: 1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENLST.dml:16:5: error ENLST: not a list: $test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENLST.dml:20:5: error ENLST: not a list: $test
